<resources>
    <string name="app_name">Air-conditioning</string>
    <string name="x_y_coordinates">X Y Coordinates</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_graph_disp">ActivityGraphDisp</string>
    <string name="nd_open">Open Navigation Drawer</string>
    <string name="nd_close">Close Navigation Drawer</string>
    <string name="enterxy">Enter the (X,Y) Coordinates</string>
    <string name="send">Send</string>
    <string name="y1">Y1</string>
    <string name="x1">X1</string>
    <string name="y2">Y2</string>
    <string name="x2">X2</string>
    <string name="y3">Y3</string>
    <string name="x3">X3</string>
    <string name="y4">Y4</string>
    <string name="x4">X4</string>
    <string name="y5">Y5</string>
    <string name="x5">X5</string>
    <string name="y6">Y6</string>
    <string name="x6">X6</string>
    <string name="y7">Y7</string>
    <string name="x7">X7</string>
    <string name="y8">Y8</string>
    <string name="x8">X8</string>
    <string name="sometext">We\'d like to hear from you, so please use one of the methods below to get in touch.</string>
</resources>
